<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ENC Provjera</string>
    <string name="hello">Hello encchecker-app!</string>
    <string name="settings_pomoc">Pomoć</string>
    <string name="settings_postavke">Postavke</string>
    <string name="settings_stanje">Stanje</string>
    <string name="enc_online_stanje_text">Trenutno stanje ENC-a:</string>
    <string name="enc_unknown_stanje_text">Nepoznato stanje ENC-a</string>
    <string name="enc_offline_stanje_text">Zadnje poznato stanje ENC-a: (Offline)</string>
    <string name="pomoc_text">POMOĆ</string>
    <string name="postavke_text">POSTAVKE</string>
    <string name="base_url">https://prodaja.hac.hr</string>
    <string name="auth_login">/auth_login.action</string>
    <string name="postavi">Postavi</string>
    <string name="username_label">Korisničko ime:</string>
    <string name="usernameHint">Korisničko ime</string>
    <string name="password_label">Lozinka:</string>
    <string name="passwordHint">Lozinka</string>
    <string name="error_wrong_data_message">Korisničko ime ili lozinka nisu prepoznati u sustavu.</string>
    <string name="error_no_data_message">Niste unijeli podatke za pristup privatnom dijelu portala.</string>
    <string name="ad_size">SMART_BANNER</string>
    <string name="refresh_button_description">Refresh</string>
    <string name="refresh">Osvježi</string>

    <color name="custom_theme_background">#424242</color>
    <!-- <color name="custom_theme_txtview_background">#D8D8D8</color> -->
    <color name="custom_theme_txtview_background">#333333</color>

    <integer name="selected_tab_color1">0xFF0AD7D7</integer>
    <integer name="selected_tab_color2">0xFF0188CC</integer>

</resources>