<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/pass_frag_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_padding_vertical"
            android:textSize="@dimen/app_text_size" >

            <TextView
                android:id="@+id/errorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/error_no_data_message"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/app_text_size"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/usernameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/errorLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_padding_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_label"
                android:textSize="@dimen/app_text_size" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/usernameHint"
                android:inputType="textPersonName"
                android:textSize="@dimen/app_text_size" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_padding_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textSize="@dimen/app_text_size" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:textSize="@dimen/app_text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@drawable/roundedbutton"
            android:padding="10dp"
            android:text="@string/postavi"
            android:textSize="@dimen/app_text_size" />
    </RelativeLayout>

</ScrollView>